@@ -1,4 +1,3 @@
 pil
-pytz
 python-*sql
 python-simplejson
