@@ -1,3 +1,8 @@
+2008-08-17  Alper KANAT  <alperkanat@gmail.com>
+
+	* REQUIREMENTS, blog/views.py, blog/templatetags/blog_filters.py,
+	comments/views.py: Removed pytz completely from the project..
+
 2008-08-15  Alper KANAT  <alperkanat@gmail.com>
 
 	* media/css/style.css, templates/500.html, templates/404.html: error pages
